--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "olx",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://marketplace.asmer.fs.a-level.com.ua/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
